--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    //Corrutinas
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
 
     //MVVM
     implementation "androidx.activity:activity-ktx:1.5.1"
