--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,17 @@ dependencies {
     // renderizado de imagenes de internet
     implementation 'com.squareup.picasso:picasso:2.8'
 
+    //navigation component
+
+    def nav_version = "2.5.3"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
